[package]
name = "gpio-mqtt-bridge"
version = "0.2.0"
authors = ["Grayson Hay <me@russellhay.com>"]
description = "A command line tool for the raspberry pi for receiving events on GPIO pins and relaying messages to MQTT"
homepage = "https://github.com/graysonarts/rust-gpio-mqtt-bridge"
repository = "https://github.com/graysonarts/rust-gpio-mqtt-bridge"
documentation = "https://github.com/graysonarts/rust-gpio-mqtt-bridge"
edition = "2018"
license = "MIT"

[dependencies]
toml = "0.5.8"
colored = "2"
serde = "1"
serde_derive = "1"
serde_json = "1"
rumqttc = "0.7.0" # 0.8.0 is broken, so we use 0.7.0 for now
rppal = "0.12.0"

[dev-dependencies]
cargo-release = "0.17.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt"]
